# vasco

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README.md  environments.yml  pyproject.toml  setup.cfg  setup.cfgold  setup.py  setup.pyold
.github/workflows/: build_wheels.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  pipeline.rst
docs/source/api/: fitsidiutil.rst  ms.rst  plotting.rst
src/avica/: cli_new.py  util.py
src/avica/fitsidiutil/: __init__.py  fitsidi_io.h  io.py  op.py  split.py  validation.py
src/avica/ms/: __init__.py  compat.py  fringefit.py  meta.py  mpiclient.py  tables.py
src/avica/pipe/: config.py  core.py  helpers.py  steps.py
src/vasco/: __init__.py  cli.py  cli_new.py  clibkup.py  config.py  core.py  util.py
src/vasco/diag/: __init__.py  cluster.py  polars.py
src/vasco/fits/: __init__.py
src/vasco/fitsidiutil/: README.md  __init__.py  __init__.pyi  bindings.cpp  chk  cli.py  core.py  extrabyte.h  fitsidi_io.h  fitsidi_lib.h  io.py  lib.py  obs.py  op.py  split.py  test  test.cpp  validation.py
src/vasco/fitsio/: __init__.py
src/vasco/fitsioutil/: __init__.py
src/vasco/helpers/: __init__.py
src/vasco/idifits/: __init__.py  proc.py
src/vasco/ms/: __init__.py  fringefit.py  fringefitdepc.py  meta.py  mpiclient.py  polars.py  tables.py
src/vasco/pipe/: __init__.py  config.py  core.py  helpers.py  main.py  steps.py
src/vasco/pipe/data/: vlba_gains.key
src/vasco/pipe/input_template/: array.inp  array_finetune.inp  constants.inp  flagging.inp  observation.inp
src/vasco/pipe/perl/: phaseshift.pl  run_mpicasa.pl
src/vasco/sources/: __init__.py
src/vasco/vasco.meta/: refants_fits.out  refants_fits.vasco  sources_fits.vasco
tests/: alfrd.last  importfitsidi.last  mstransform.last  smile_complete_table.txt  test1.py  test2.py  test3.py  test_casa_compat.py  test_pipeline.py
tests/reduction/BV019/wd/: gc_dpfu_fromidi.ANTAB.0
tests/reduction/BV019/wd/VLBI.ms/: table.f10  table.f11  table.f12  table.f13  table.f14  table.f15  table.f16  table.f17  table.f18  table.f19  table.f20  table.f20_TSM0  table.f21  table.f21_TSM1  table.f22  table.f22_TSM1  table.f4  table.f5  table.f6  table.f9  table.info
tests/reduction/BV019/wd/VLBI.ms/ANTENNA/: table.f0
tests/reduction/BV019/wd/VLBI.ms/EARTH_ORIENTATION/: table.f0
tests/reduction/BV019/wd/VLBI.ms/FEED/: table.f0
tests/reduction/BV019/wd/VLBI.ms/FIELD/: table.f0  table.f0i
tests/reduction/BV019/wd/VLBI.ms/GAIN_CURVE/: table.f0
tests/reduction/BV019/wd/VLBI.ms/HISTORY/: table.f0
tests/reduction/BV019/wd/VLBI.ms/POLARIZATION/: table.f0  table.f0i
tests/reduction/BV019/wd/VLBI.ms/SPECTRAL_WINDOW/: table.f0  table.f0i
tests/reduction/BV019/wd/VLBI.ms/SYSCAL/: table.f0  table.f0i
tests/reduction/BV019/wd/input_template/: array.inp  array_finetune.inp  constants.inp  flagging.inp  observation.inp
tests/reduction/BV019/wd/vasco.meta/: available_wd_ifolder.vasco  fitsfiles_used.vasco  listobs_fits.out  msmeta_sources.vasco  msmeta_sources_C_1124+571.vasco  refants_C_1124+571.vasco  snrating_C_1124+571.out  sources_ms_C_1124+571.vasco  sources_snr_C_1124+571.vasco
tests/reduction/BV019/wd/wd_C/VLBI_C.ms/: ANTENNA  DATA_DESCRIPTION  EARTH_ORIENTATION  FEED  FIELD  FLAG_CMD  GAIN_CURVE  HISTORY  OBSERVATION  POINTING  POLARIZATION  PROCESSOR  SOURCE  SPECTRAL_WINDOW  STATE  SYSCAL  table.info
tests/reduction/BV019/wd/wd_C/VLBI_C.ms/SUBMSS/VLBI_C.ms.0000.ms/: table.f10  table.f12  table.f13  table.f14  table.f15  table.f16  table.f17  table.f17_TSM1  table.f18  table.f19  table.f19_TSM0  table.f20  table.f21  table.f21_TSM1  table.f22  table.f22_TSM1  table.f4  table.f5  table.f6  table.f7  table.f9
tests/reduction/BV019/wd/wd_C/VLBI_C.ms/SUBMSS/VLBI_C.ms.0001.ms/: table.f10  table.f11  table.f12  table.f13  table.f14  table.f15  table.f16  table.f17  table.f17_TSM1  table.f18  table.f19  table.f19_TSM0  table.f2  table.f20  table.f21  table.f22  (+5 more)
tests/reduction/BV019/wd/wd_C/fft_tab/: fft_tab.vasco
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_BR_21857.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_BR_463.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_FD_374.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_FD_85216.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_HN_63.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_HN_74185.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_KP_21746.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_KP_385.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_LA_374.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_LA_85216.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_MK_62187.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_NL_21857.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_NL_463.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_OV_421.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_OV_63857.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_PT_21748.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_PT_563.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_SC_174.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/fft_tab/fft_tab_SC_85632.t/: table.f0  table.f0i
tests/reduction/BV019/wd/wd_C/input_template_C/: array.inp  array_finetune.inp  flagging.inp  observation.inp
tests/reduction/BV019/wd/wd_C/vasco.meta/: msmeta_sources.vasco  sources.vasco
tests/vasco.logs/: vasco_crash_fits_to_ms.json  vasco_crash_phaseshift.json  vasco_crash_preprocess_fitsidi.json  vasco_crash_rpicard.json  vasco_crash_vasco_avg.json  vasco_crash_vasco_fill_input.json  vasco_crash_vasco_snr.json  vasco_crash_vasco_split_ms.json  vasco_crash_vascometa_ms.json
vasco.meta/: refants_fits.out  refants_fits.vasco
(+156 files in other folders)
