[build-system]
requires = [
    "scikit-build-core>=0.3.3", 
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "vasco"
version = "0.3.0.3"
description = "VASCO: VLBI and SMILE-based CASA Optimizations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Avinash Kumar", email = "avialxee@gmail.com" }
]
urls = { "Homepage" = "https://github.com/avikhagol/vasco"}
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "astropy",
  "numpy",
  "ipython",  
  "pandas",
  "scipy",
  "scikit-learn",
  "polars",
  "protobuf==3.20.3",
  "typer",
  "importlib_resources>=5.0; python_version < '3.9'",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

[tool.setuptools.package-data]
"vasco.pipe" = ["perl/*.pl"]

[project.optional-dependencies]
dev = ["pytest>=3.8"]
all = ["casatools", "casatasks", "casampi"]
test = ["pytest"]

[project.scripts]
vasco = "vasco:cli_new"
fitsidiutil = "vasco.fitsidiutil.cli:fitsidiutil_cli"

[tool.scikit-build]
# cmake.build-type = "Release"
cmake.source-dir = "."
wheel.packages = ["src/vasco"]    # locates the associated module
wheel.install-dir = "."
build.tool-args = ["-j4"]         # should make all packages e.g cfitsio/fitsidiutil in cmake to use maximum of 4 cores
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_RPATH = "${CMAKE_INSTALL_PREFIX}/lib"
CMAKE_BUILD_WITH_INSTALL_RPATH = "TRUE"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "TRUE"

[tool.ruff]
src = ["src"]

[tool.cibuildwheel]
before-all = "uname -a"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.linux]
repair-wheel-command = "cp {wheel} /project/debug_wheel.whl; auditwheel show {wheel}; cp {wheel} {dest_dir}"