[build-system]
requires = [
    "scikit-build-core>=0.3.3",
    "pybind11"
]
build-backend = "scikit_build_core.build"

[project]
name = "avica"
version = "0.3.1.0"
description = "AVICA: Automated VLBI pipeline in CASA"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Avinash Kumar", email = "avialxee@gmail.com" }
]
urls = { "Homepage" = "https://github.com/avikhagol/avica"}
classifiers = [
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research"
]

dependencies = [
  "astropy",
  "numpy",
  "ipython",
  "pandas",
  "scipy",
  "scikit-learn",
  "polars",
  "protobuf==3.20.3",
  "typer",
  "importlib_resources>=5.0; python_version < '3.9'",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
testpaths = ["tests"]

# [tool.setuptools.package-data]
# "avica.pipe" = ["perl/*.pl"]

[project.optional-dependencies]
dev = ["pytest>=3.8"]
all = ["casatools", "casatasks", "casampi"]
test = ["pytest"]

[project.scripts]
avica = "avica:cli_new"
fitsidiutil = "avica.fitsidiutil.cli:fitsidiutil_cli"

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = true
cmake.source-dir = "."
wheel.packages = ["src/avica"]    # locates the associated module
wheel.install-dir = "."
build.tool-args = ["-j4"]         # should make all packages e.g cfitsio/fitsidiutil in cmake to use maximum of 4 cores
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
wheel.expand-macos-universal-tags = true
wheel.exclude = [
    "lib64/**",
    "lib/**",
    "include/**",
    "avica/fitsidiutil/test",
    "avica/fitsidiutil/chk",
]

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_RPATH = "${CMAKE_INSTALL_PREFIX}/lib"
CMAKE_BUILD_WITH_INSTALL_RPATH = "TRUE"
CMAKE_INSTALL_RPATH_USE_LINK_PATH = "TRUE"


[tool.ruff]
src = ["src"]

[tool.cibuildwheel]
before-all = "uname -a"
enable = ["cpython-prerelease"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*"]

[tool.cibuildwheel.linux]
before-build = "pip cache purge || true"
repair-wheel-command = "auditwheel show {wheel}; auditwheel repair -w {dest_dir} {wheel}"
# manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64:2024-11-23-da4547b"
manylinux-x86_64-image= "quay.io/pypa/manylinux_2_28_x86_64:2024.11.24-1"
