[metadata]
name = vasco
version = 0.0.1
author = Avinash Kumar
author_email = avialxee@gmail.com
description = VLBI and SMILE source based CASA Optimizations (VASCO)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ia.forth.gr/smile/vasco/
project_urls =
    Bug Tracker = https://gitlab.ia.forth.gr/smile/vasco/issues
[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src